tests/core/snapshots/postgres-select-one.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  user(id: Int!): User
}

type User {
  email: String
  id: Int
  name: String
}

schema {
  query: Query
}
