tests/core/snapshots/postgres-single-connection.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  users: [User]
}

type User {
  email: String
  id: Int
  name: String
}

schema {
  query: Query
}
