tests/core/snapshots/postgres-single-connection.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "main", src: "main.sql", type: Sql)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  users: [User] @postgres(table: "users")
}

type User {
  email: String
  id: Int
  name: String
}
