tests/core/snapshots/postgres-unknown-column.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "main", src: "users.sql", type: Sql)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  users: [User] @postgres(table: "users", orderBy: "nonexistent_column ASC")
}

type User {
  id: Int
  name: String
}
