tests/core/snapshots/postgres-uuid-type.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Item {
  id: ID
  name: String
}

type Query {
  items: [Item]
}

schema {
  query: Query
}
