tests/core/snapshots/postgres-uuid-type.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "main", src: "items.sql", type: Sql)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Item {
  id: ID
  name: String
}

type Query {
  items: [Item] @postgres(table: "items")
}
