tests/core/snapshots/postgres-view-materialized.md_client.snap
---
source: tests/core/spec.rs
assertion_line: 255
expression: formatted
---
type CompletedOrder {
  amount: Float
  id: Int
}

type Query {
  completedOrders(limit: Int, offset: Int): [CompletedOrder]
}

schema {
  query: Query
}
